feat: move auth reset to UI/API and remove reset script (#2)
